Fix Hulk Ryu on smaller pages

--- a/css/main.css
+++ b/css/main.css
@@ -5,23 +5,23 @@ html {
 .main {
 	background-color: white;
 	margin-top: 110px;
-	padding-left: 100px;
 	padding-right: 100px;
-	min-width: 1200px;
+	min-width: 1000px;
 	height: 500px;
 	position: relative;
 	z-index: 1;
 }
 
 .ryu {
-	width: 659px;
+	width: 570px;
 	height: 494px;
 	float: left;
 }
 
 .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
-	width: 659px;
+	width: 570px;
 	height: 494px;
+	margin-left: -100px;
 }
 
 
@@ -52,7 +52,7 @@ html {
 
 .hadouken {
 	background-image: url("../images/hadouken.gif");
-	width: 156px;
+	width: 150px;
 	height: 90px;
 	display: none;
 	float: left;
@@ -62,17 +62,17 @@ html {
 	left: -200px;
 }
 
-
 .hulkryu {
-	width: 659px;
+	width: 570px;
 	height: 494px;
 	float: right;
 	-webkit-filter: hue-rotate(90deg);
 	transform: scale(-1, 1);
+	margin-right: -180px;
 }
 
 .hulkryu-ready, .hulkryu-still, .hulkryu-throwing, .hulkryu-cool {
-	width: 659px;
+	width: 570px;
 	height: 494px;
 }
 
@@ -106,21 +106,21 @@ html {
 	background-image: url("../images/hadouken.gif");
 	transform: scale(-1, 1);
 	-webkit-filter: hue-rotate(270deg);
-	width: 156px;
+	width: 150px;
 	height: 90px;
 	display: none;
 	float: right;
 	position: relative;
 	z-index: 10;
 	top: 170px;
-	left: 250px;
+	left: 150px;
 }
 
 
 .content {
 	position: absolute;
-	width: 600px;
-	left: 550px;
+	width: 400px;
+	left: 400px;
 	padding-top: 55px;
 	font-family: Acme;
 	font-style: italic;
@@ -134,6 +134,7 @@ html {
 	background-image: url("../images/logo-sf.png");
 	width: 682px;
 	height: 314px;
+	margin-left: -140px;
 	background-repeat: no-repeat;
 }
 
@@ -143,7 +144,6 @@ html {
 	height: 172px;
 	background-repeat: no-repeat;
 	margin-top: 100px;
-	margin-left: 40px;
 }
 
 .broughttoyou {
@@ -157,17 +157,17 @@ html {
 
 .instruction {
 	text-transform: uppercase;
-	font-size: 30px;
+	font-size: 25px;
 }
 
  #textleft {
- 	margin-right: 300px;
+ 	margin-right: 200px;
  }
 
 
  #textright {
- 	margin-left: 300px;
+ 	margin-left: 200px;
  }
-*/
+
 
 
